# Familly-bot

./: .env.example  Dockerfile  alembic.ini  docker-compose.yaml  makefile  pyproject.toml
.github/workflows/: ci_cd.yaml
bot/: .env.example  common.py  create_bot.py  main.py  settings.py
bot/adapters/: __init__.py  backend.py
bot/constants/: __init__.py  callback_datas.py  commands.py  key_state.py  keys.py  messages.py  texts_message.py  urls.py
bot/di/: __init__.py  providers.py
bot/entities/: __init__.py  employer.py  resume.py  user.py  vacancy.py
bot/keyboards/: __init__.py  inline.py
bot/middlewares/: __init__.py  auth.py
bot/routers/: __init__.py  ai.py  common.py  help.py  profile.py  start.py
bot/routers/dialogs/: __init__.py
bot/routers/dialogs/ai/: __init__.py  getters.py  (+3 more)
bot/schemas/: __init__.py  ai.py  auth.py  base.py  user.py
bot/use_cases/: __init__.py  authorization.py
docker/: entrypoint.sh
nginx/: nginx.conf
prometheus_data/: prometheus.yml
source/: main.py
source/infrastructure/services/: ai_service.py
src/: .env.example  alembic.ini  common.py  constants.py  docker-compose.yaml  main.py  monitoring.py  prompts.yaml  settings.py  wsgi.py
src/api/: __init__.py  ai.py  auth.py  users.py
src/application/dtos/: query.py
src/application/repositories/: base.py  resume.py  user.py
src/application/services/: ai_service.py  hh_service.py  state_manager.py
src/application/use_cases/: auth_hh.py  generate_response.py  regenerate_response.py
src/constants/: keys.py
src/db/: __init__.py  engine.py
src/db/migrations/: env.py
src/db/models/: __init__.py  base.py  refresh_token.py  user.py
src/db/repositories/: __init__.py  base.py  refresh_token.py  user.py
src/di/: __init__.py  dependencies.py  providers.py
src/docker/ollama/: entrypoint.sh
src/domain/entities/: base.py  employer.py  query.py  response.py  resume.py  user.py  vacancy.py
src/infrastructure/db/: engine.py  uow.py
src/infrastructure/di/: __init__.py  providers.py
src/infrastructure/services/: ai_service.py  hh_service.py  state_manager.py
src/infrastructure/settings/: app.py  test.py
src/infrastructure/utils/: jwt.py
src/middlewares/: memory.py
src/presentation/: wsgi.py
src/presentation/api/: auth.py  health.py
src/presentation/bot/: create_bot.py
src/schemas/: __init__.py  auth.py  base.py  chat.py  user.py
src/services/: ai.py  prompts.py  state_manager.py
src/use_cases/: __init__.py  auth.py
src/utils/: __init__.py  jwt.py  scopes.py  tokens.py
tests/: conftest.py  test_ai_service.py  test_api_auth.py  test_dependencies.py  test_prompts.py  test_repositories.py  test_schemas.py  test_scopes.py  test_tokens.py  test_use_cases.py
tests/integration/: conftest.py
tests/integration/db/: conftest.py  test_uow.py  test_user_repository.py
tests/integration/hh_service/: conftest.py  test_hh_oauth.py  test_hh_service.py
(+30 files in other folders)
